<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/plain_button"
    android:backgroundTint="@color/caregiver_background"
    android:columnOrderPreserved="true"
    android:columnCount="3"
    android:rowCount="9"
    android:rowOrderPreserved="true"
    android:padding="@dimen/components_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_caregiver_id"
        android:layout_row="1"
        android:layout_column="0"
        android:minHeight="36dp"
        android:layout_marginRight="@dimen/small_components_margin"
        android:gravity="center_vertical|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:layout_row="2"
        android:layout_column="0"
        android:minHeight="36dp"
        android:layout_marginRight="@dimen/small_components_margin"
        android:gravity="center_vertical|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:layout_row="3"
        android:layout_column="0"
        android:minHeight="36dp"
        android:layout_marginRight="@dimen/small_components_margin"
        android:gravity="center_vertical|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password_confirmation"
        android:layout_row="4"
        android:layout_column="0"
        android:minHeight="36dp"
        android:layout_marginRight="@dimen/small_components_margin"
        android:gravity="center_vertical|start" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceptEmailCheckbox"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_gravity="center"
        android:checked="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:layout_row="6"
        android:layout_column="0"
        android:id="@+id/emailLabel"
        android:minHeight="36dp"
        android:layout_marginRight="@dimen/small_components_margin"
        android:gravity="center_vertical|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_use_email"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:minHeight="36dp"
        android:gravity="center_vertical|start" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceptSMSCheckbox"
        android:layout_row="7"
        android:layout_column="2"
        android:layout_gravity="center"
        android:checked="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_number"
        android:layout_row="8"
        android:layout_column="0"
        android:id="@+id/phoneNumberLabel"
        android:minHeight="36dp"
        android:layout_marginRight="@dimen/small_components_margin"
        android:gravity="center_vertical|start" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/emailEditText"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@drawable/edit_text"
        android:textColor="@color/edit_text_color"
        android:backgroundTint="@color/caregiver_background"
        android:backgroundTintMode="screen"
        android:layout_gravity="right"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:paddingLeft="@dimen/small_components_margin"
        android:paddingRight="@dimen/small_components_margin"
        android:gravity="center_vertical|end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_use_phone_number"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:minHeight="36dp"
        android:gravity="center_vertical|start" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberEditText"
        android:layout_row="8"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@drawable/edit_text"
        android:textColor="@color/edit_text_color"
        android:backgroundTint="@color/caregiver_background"
        android:backgroundTintMode="screen"
        android:inputType="phone"
        android:layout_gravity="right"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:paddingLeft="@dimen/small_components_margin"
        android:paddingRight="@dimen/small_components_margin"
        android:gravity="center_vertical|end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_new_profile"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:minHeight="36dp"
        android:gravity="center_vertical|start"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caregiverIdEditText"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@drawable/edit_text"
        android:textColor="@color/edit_text_color"
        android:backgroundTint="@color/caregiver_background"
        android:backgroundTintMode="screen"
        android:inputType="text"
        android:layout_gravity="right"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:paddingLeft="@dimen/small_components_margin"
        android:paddingRight="@dimen/small_components_margin"
        android:gravity="center_vertical|end" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@drawable/edit_text"
        android:textColor="@color/edit_text_color"
        android:backgroundTint="@color/caregiver_background"
        android:backgroundTintMode="screen"
        android:inputType="textPersonName"
        android:layout_gravity="right"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:paddingLeft="@dimen/small_components_margin"
        android:paddingRight="@dimen/small_components_margin"
        android:gravity="center_vertical|end" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@drawable/edit_text"
        android:textColor="@color/edit_text_color"
        android:backgroundTint="@color/caregiver_background"
        android:backgroundTintMode="screen"
        android:inputType="textPassword"
        android:layout_gravity="right"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:paddingLeft="@dimen/small_components_margin"
        android:paddingRight="@dimen/small_components_margin"
        android:gravity="center_vertical|end" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordConfirmationEditText"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@drawable/edit_text"
        android:textColor="@color/edit_text_color"
        android:backgroundTint="@color/caregiver_background"
        android:backgroundTintMode="screen"
        android:inputType="textPassword"
        android:layout_gravity="right"
        android:minWidth="180dp"
        android:maxWidth="180dp"
        android:paddingLeft="@dimen/small_components_margin"
        android:paddingRight="@dimen/small_components_margin"
        android:gravity="center_vertical|end" />


</GridLayout>
